@@ -3,6 +3,7 @@
   - Added static DockWidgetBase::byName() (#126)
   - SOURCE-COMPAT-BREAK: The enum KDDockWidgets::AddingOption has been renamed to
     KDDockWidgets::InitialVisibilityOption
+  - You can now pass a preferred initial size to MainWindow::addDockWidget() (#95)
 
 * v1.2.1 (unreleased)
   - Support for resizing dock widgets when they are in overlay/popup mode (autohide/sidebar feature)
